# routes/api.php
@@ -1,6 +1,5 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthentificationController;
 
@@ -15,13 +14,15 @@ use App\Http\Controllers\AuthentificationController;
 |
 */
 
-// Routes d'authentification
-Route::post('/v1/login', [AuthentificationController::class, 'login']);
-Route::post('/v1/register', [AuthentificationController::class, 'register']);
-Route::post('/v1/refresh', [AuthentificationController::class, 'refresh']);
+// Routes publiques
+Route::prefix('v1')->group(function () {
+    Route::post('auth/login', [AuthentificationController::class, 'login']);
+    Route::post('auth/register', [AuthentificationController::class, 'register']);
+    Route::post('auth/refresh', [AuthentificationController::class, 'refresh']);
 
-// Routes protégées
-Route::middleware('auth:api')->group(function () {
-    Route::get('/v1/logout', [AuthentificationController::class, 'logout']);
-    Route::get('/v1/me', [AuthentificationController::class, 'me']);
+    // Routes protégées
+    Route::middleware('auth:api')->group(function () {
+        Route::post('auth/logout', [AuthentificationController::class, 'logout']);
+        Route::get('auth/me', [AuthentificationController::class, 'me']);
+    });
 });
